ingress-helloworld.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-helloworld
  namespace: namespace-helloworld
spec:
  rules:
  - host: "my.project"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-helloworld
            port:
              number: 80
